# NeuralEditor

./: .env.example  .gitignore  Makefile  README.md  fix_romance.py  gen_key.py  pyproject.toml  requirements.txt  start_tunnel.ps1  tunnel_url.txt  访问链接.txt
.agents/skills/neural-editor-ops/: SKILL.md
.agents/skills/neural-editor-ops/references/: commands.md
config/: settings.yaml
config/characters/: default.yaml
config/prompts/: system_base.txt
config/scenes/: chapter1.yaml
config/training/: lora.yaml  memit.yaml  rome.yaml
data/: my_romance_data.jsonl  romance_chat_sample.jsonl
data/sessions/: session_20260618_163851.json
docs/: pytorch_cuda_setup.md  training-guide.html
models/embedding/BAAI/: bge-small-zh-v1.5
scripts/: alignment_tuner.py  demo_no_llm.py  download_model.py  download_torch.py  train_lora.py  web_ui.py
scripts/editing/: evaluate_edit.py  memit_edit.py  rome_edit.py
src/: __init__.py  main.py
src/core/: character.py  memory_system.py  state_machine.py  story_engine.py
src/models/: edit_utils.py  llm_engine.py  model_editor.py
src/training/: lora_trainer.py
src/utils/: config_loader.py  json_storage.py  scene_loader.py
src/web/: admin.html  client.html  romance.html  server.py  tuner.html
tests/: test_api_key_manager.py  test_character.py  test_json_storage.py  test_memory.py  test_romance_session.py  test_story_engine.py  test_web_auth.py
